# gba_senpai

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/libretro/: libretro.cpp
